--- a/src/Home.css
+++ b/src/Home.css
@@ -3,13 +3,18 @@
 
 body {
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 .home {
-  /* min-height: 100vh; */
+  position: relative;
+  overflow: hidden;
   font-family: "Gowun Dodum", sans-serif;
   font-weight: 400;
-  /* background: #0af; */
+  width: 100vw;
+  height: 100vh;
+  background: rgb(214, 239, 252);
 }
 .container {
   width: 100%;
@@ -19,9 +24,9 @@ body {
   position: absolute;
   left: 50%;
   top: 40%;
+
   transform: translate(-50%, -40%);
-  font-size: 2rem;
-  z-index: 5;
+  font-size: clamp(20px, 5vw, 30px);
 }
 
 .p-1,
@@ -60,56 +65,49 @@ body {
 
 .wave.container {
   border-radius: 5px;
-  background: linear-gradient(to bottom, white, rgb(40, 160, 224));
   position: absolute;
-  /* bottom: 0%; */
   transform: translate3d(0, 0, 0);
 }
 
 .wave {
-  opacity: 0.4;
   position: absolute;
   /* top: 80vh; */
   /* left: 50%; */
   width: 2500px;
   height: 2500px;
-  margin-left: -20vw;
-  margin-top: -110vh;
+
+  margin-left: -10vw;
+  margin-top: -90vh;
   transform-origin: 50% 53%;
   border-radius: 43%;
-  background: white;
+}
+
+.wave.label-1 {
+  opacity: 0.8;
   animation: drift 8000ms infinite linear;
+  background: white;
+  z-index: -10;
 }
 
 .wave.label-2 {
+  opacity: 0.6;
   animation: drift 8100ms infinite linear;
+  background: white;
   z-index: -5;
 }
 
 .wave.label-3 {
+  opacity: 0.4;
   animation: drift 8500ms infinite linear;
-  opacity: 0.2;
   background: white;
-  /* background: white; */
   z-index: -2;
-}
-
-.home:after {
-  content: "";
-  display: block;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: white;
-  transform: translate3d(0, 0, 0);
 }
 
 .microphone-img {
   fill: rgb(149, 207, 239);
   height: 5vh;
-  box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9,
-    5px 5px 20px 0px #0002, 3px 3px 4px 0px #0001;
+  /* box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9,
+    5px 5px 20px 0px #0002, 3px 3px 4px 0px #0001; */
   border-radius: 50%;
 }
 
