--- a/src/Home.css
+++ b/src/Home.css
@@ -17,15 +17,18 @@ body {
   background: rgb(214, 239, 252);
 }
 .container {
+  display: flex;
+  justify-content: center;
   width: 100%;
+  float: left;
+}
+.container.main-des {
+  top: 25vh;
 }
 .main-des {
   text-align: center;
   position: absolute;
-  left: 50%;
-  top: 40%;
-
-  transform: translate(-50%, -40%);
+  height: 40vh;
   font-size: clamp(20px, 5vw, 30px);
 }
 
@@ -33,7 +36,7 @@ body {
 .p-2,
 .p-3,
 .p-4,
-.microphone-img {
+.mic-img {
   animation: fadeInUp 3s;
   -moz-animation: fadeInUp 3s; /* Firefox */
   -webkit-animation: fadeInUp 3s; /* Safari and Chrome */
@@ -47,20 +50,36 @@ body {
 
 .p-3 {
   opacity: 0;
-  animation-delay: 2s;
+  animation-delay: 2.5s;
   animation-fill-mode: forwards;
 }
 
 .p-4 {
   opacity: 0;
-  animation-delay: 3s;
+  animation-delay: 4s;
   animation-fill-mode: forwards;
 }
 
-.microphone-img {
+.mic-img {
   opacity: 0;
-  animation-delay: 4s;
+  animation-delay: 5.5s;
   animation-fill-mode: forwards;
+  fill: rgb(149, 207, 239);
+  height: clamp(30px, 10vh, 50px);
+  border-radius: 50%;
+  position: absolute;
+}
+
+.container.mic-img {
+  bottom: 23vh;
+}
+
+.container.mic-img svg {
+  transition: all 0.2s linear;
+}
+
+.container.mic-img:hover svg {
+  height: clamp(35px, 11vh, 55px);
 }
 
 .wave.container {
@@ -101,21 +120,6 @@ body {
   animation: drift 8500ms infinite linear;
   background: white;
   z-index: -2;
-}
-
-.microphone-img {
-  fill: rgb(149, 207, 239);
-  height: 5vh;
-  /* box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9,
-    5px 5px 20px 0px #0002, 3px 3px 4px 0px #0001; */
-  border-radius: 50%;
-}
-
-.microphone-img:hover {
-  box-shadow: 0px 0px 0px 0px #fff9;
-}
-
-.microphone-img-path:hover {
 }
 
 @keyframes drift {
