--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Nanum+Myeongjo&display=swap");
 
 body {
@@ -10,7 +9,7 @@ body {
 .home {
   position: relative;
   overflow: hidden;
-  font-family: "Gowun Dodum", sans-serif;
+  font-family: "Gowun Dodum", serif;
   font-weight: 400;
   width: 100vw;
   height: 100vh;
@@ -20,7 +19,6 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  float: left;
 }
 .container.main-des {
   top: 25vh;
@@ -36,7 +34,8 @@ body {
 .p-2,
 .p-3,
 .p-4,
-.mic-img {
+.mic-img,
+.nav-bar {
   animation: fadeInUp 3s;
   -moz-animation: fadeInUp 3s; /* Firefox */
   -webkit-animation: fadeInUp 3s; /* Safari and Chrome */
@@ -60,26 +59,53 @@ body {
   animation-fill-mode: forwards;
 }
 
-.mic-img {
+.nav-bar {
   opacity: 0;
   animation-delay: 5.5s;
   animation-fill-mode: forwards;
-  fill: rgb(149, 207, 239);
-  height: clamp(30px, 10vh, 50px);
-  border-radius: 50%;
   position: absolute;
+  /* display: flex; */
+  /* justify-content: center; */
+  align-items: center;
+  bottom: 14vh;
+  display: table;
+
+  /* transition: all 0.2s linear; */
 }
 
-.container.mic-img {
-  bottom: 23vh;
-}
-
-.container.mic-img svg {
+.mic-img {
+  fill: rgb(149, 207, 239);
+  height: clamp(40px, 15vw, 50px);
+  border-radius: 50%;
   transition: all 0.2s linear;
 }
 
-.container.mic-img:hover svg {
-  height: clamp(35px, 11vh, 55px);
+.center {
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* overflow: scroll; */
+}
+.item-con {
+  margin-top: 3vh;
+}
+
+.item {
+  color: rgb(126, 125, 125);
+  opacity: 0;
+  text-align: center;
+  padding: 10px;
+  /* width: clamp(100px, 10vw, 200px); */
+  border-radius: 30px;
+  margin-left: 1%;
+  margin-right: 1%;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+
+.mic-img:hover ~ .item {
+  display: block;
 }
 
 .wave.container {
@@ -95,8 +121,8 @@ body {
   width: 2500px;
   height: 2500px;
 
-  margin-left: -10vw;
-  margin-top: -90vh;
+  margin-left: -15vw;
+  margin-top: -110vh;
   transform-origin: 50% 53%;
   border-radius: 43%;
 }
