--- a/src/Home.css
+++ b/src/Home.css
@@ -149,6 +149,59 @@ body {
   z-index: -2;
 }
 
+.recording {
+  position: absolute;
+  left: 50%;
+  bottom: 4vh;
+  transform: translate(-50%, -50%);
+  height: 50px;
+  align-items: center;
+  display: none;
+}
+
+.obj {
+  width: 6px;
+  height: 0px;
+  background: rgb(142, 203, 236);
+  margin: 0 3px;
+  border-radius: 10px;
+  animation: loading 0.8s infinite;
+}
+
+.obj:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.obj:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.obj:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.obj:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.obj:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.obj:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.obj:nth-child(8) {
+  animation-delay: 0.7s;
+}
+
+@keyframes loading {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 50px;
+  }
+  100% {
+    height: 0;
+  }
+}
+
 @keyframes drift {
   from {
     transform: rotate(0deg);
