--- a/src/Home.css
+++ b/src/Home.css
@@ -20,14 +20,66 @@ body {
   justify-content: center;
   width: 100%;
 }
-.container.main-des {
+.container.main-con {
+  z-index: 1;
   top: 25vh;
+  position: absolute;
 }
 .main-des {
+  z-index: 1;
   text-align: center;
   position: absolute;
   height: 40vh;
   font-size: clamp(20px, 5vw, 30px);
+}
+
+.minimal.element {
+  transform: translate(0, -50%);
+  background: white;
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%);
+
+  border-radius: 5px;
+  font-size: clamp(18px, 4vw, 28px);
+  width: 100%;
+  height: 100%;
+}
+.minimal p {
+  line-height: normal;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.lit-container {
+  display: none;
+  position: absolute;
+  text-align: center;
+  height: clamp(120px, 30vh, 200px);
+  width: clamp(350px, 40vw, 2500px);
+  top: 10vh;
+  line-height: clamp(120px, 30vh, 200px);
+  box-shadow: 2px 2px 5px rgba(0, 0 0, 0.15);
+}
+
+/* .lit-container:hover .lit,
+.lit-container:focus-within .lit {
+  background: hsla(0deg, 0%, 60%, 20%) !important;
+} */
+
+/* lit --------------------------- */
+
+[data-lit-hue] {
+  position: relative;
+}
+
+span.lit {
+  border-radius: 50%;
+  position: absolute;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  animation: blow 2s forwards;
+  transition: all 400ms ease;
 }
 
 .p-1,
@@ -49,19 +101,19 @@ body {
 
 .p-3 {
   opacity: 0;
-  animation-delay: 2.5s;
+  animation-delay: 2s;
   animation-fill-mode: forwards;
 }
 
 .p-4 {
   opacity: 0;
-  animation-delay: 4s;
+  animation-delay: 3s;
   animation-fill-mode: forwards;
 }
 
 .nav-bar {
   opacity: 0;
-  animation-delay: 5.5s;
+  animation-delay: 4s;
   animation-fill-mode: forwards;
   position: absolute;
   /* display: flex; */
@@ -121,8 +173,13 @@ body {
   /* left: 50%; */
   width: 2500px;
   height: 2500px;
+  /* width: 500px;
+  height: 500px; */
   margin-left: -15vw;
   margin-top: -110vh;
+
+  /* margin-left: 22vw;
+  margin-top: 10vh; */
   transform-origin: 50% 53%;
   border-radius: 43%;
 }
@@ -150,7 +207,7 @@ body {
 }
 
 .wave.label-3 {
-  opacity: 0.4;
+  opacity: 0.5;
   animation: drift 8500ms infinite linear;
   background: white;
   z-index: -2;
@@ -195,6 +252,34 @@ body {
 }
 .obj:nth-child(8) {
   animation-delay: 0.7s;
+}
+
+.bubble {
+  position: absolute;
+  bottom: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  z-index: 5;
+  opacity: 0.5;
+  animation: bubbleUp 10s forwards;
+}
+
+@keyframes blow {
+  0% {
+    transform: translate(-50%, -50%) scale(0.1);
+    opacity: 0;
+  }
+
+  10% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate(-50%, -40vh);
+    opacity: 0;
+  }
 }
 
 @keyframes loading {
@@ -244,5 +329,14 @@ body {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes bubbleUp {
+  from {
+    transform: translateY(0vh);
+  }
+  to {
+    transform: translateY(-100vh);
   }
 }
