--- a/src/Home.css
+++ b/src/Home.css
@@ -36,14 +36,14 @@ body {
 .minimal.element {
   transform: translate(0, -50%);
   background: white;
+  /* box-shadow: 2px 2px 5px rgba(0, 0 0, 0.15); */
   position: relative;
   top: 50%;
-  transform: translate(0, -50%);
-
-  border-radius: 5px;
+  border-radius: 40px;
   font-size: clamp(18px, 4vw, 28px);
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 .minimal p {
   line-height: normal;
@@ -59,7 +59,6 @@ body {
   width: clamp(350px, 40vw, 2500px);
   top: 10vh;
   line-height: clamp(120px, 30vh, 200px);
-  box-shadow: 2px 2px 5px rgba(0, 0 0, 0.15);
 }
 
 /* .lit-container:hover .lit,
