feature: create VoiceColor component

--- a/src/Home.css
+++ b/src/Home.css
@@ -59,6 +59,7 @@ body {
   width: clamp(350px, 40vw, 2500px);
   top: 10vh;
   line-height: clamp(120px, 30vh, 200px);
+  animation: appear 1s 1;
 }
 
 /* .lit-container:hover .lit,
@@ -328,6 +329,24 @@ span.lit {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes appear {
+  0% {
+    transform: scaleX(0) scaleY(0) translateY(0);
+  }
+  100% {
+    transform: scaleX(1) scaleY(1) translateY(0);
+  }
+}
+
+@keyframes disappear {
+  0% {
+    transform: scaleX(1) scaleY(1) translateY(0);
+  }
+  100% {
+    transform: scaleX(0) scaleY(0) translateY(0);
   }
 }
 
