--- a/src/Home.css
+++ b/src/Home.css
@@ -22,7 +22,7 @@ body {
 }
 .container.main-con {
   z-index: 1;
-  top: 25vh;
+  top: 10vh;
   position: absolute;
   height: 25vh;
 }
@@ -30,6 +30,7 @@ body {
   z-index: 1;
   text-align: center;
   position: absolute;
+  top: 15vh;
   height: 40vh;
   font-size: clamp(20px, 5vw, 30px);
 }
@@ -279,6 +280,59 @@ span.lit {
   z-index: 5;
   opacity: 0.5;
   animation: bubbleUp 10s forwards;
+}
+
+.chat-message-container {
+  height: 65vh;
+  display: flex;
+  flex-direction: column; /* 세로로 정렬 */
+  font-size: clamp(20px, 1.3vw, 30px);
+}
+
+.chat-req-message {
+  width: 50%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  align-self: flex-end; /* 오른쪽 정렬 */
+  text-align: right;
+  padding: 2%;
+  margin: 1%;
+  background-color: rgb(129, 197, 234);
+}
+
+.chat-res-message {
+  width: 50%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  align-self: flex-start; /* 왼쪽 정렬 */
+  text-align: left;
+  padding: 2%;
+  margin: 1%;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.chat-container {
+  width: clamp(350px, 60vw, 900px);
+  /* width: 60vw; */
+  height: 80vh;
+  border-radius: 50px;
+  /* background: rgba(255, 255, 255, 0.3);
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px; */
+}
+
+.chat-enter {
+  width: 100%;
+  height: clamp(50px, 10vh, 88px);
+  margin: 0 auto;
+  border-radius: 50px;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 @keyframes blow {
